<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>launch_ext</name>
  <version>0.0.1</version>
  <description>Some extras for launch tooling.</description>

  <maintainer email="russ.webber@greenroomrobotics.com">Russ Webber</maintainer>

  <license>MIT</license>

  <author email="russ.webber@greenroomrobotics.com">Russ Webber</author>

  <exec_depend>launch</exec_depend>
  <exec_depend>python3-psutil</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>python3-jinja2</exec_depend>
  <exec_depend>python3-git</exec_depend>
  <exec_depend>python3-pydantic</exec_depend>
  <!-- <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
